book and media report content update Fri 10/01/2021

--- a/report/books/2021_book_images.html
+++ b/report/books/2021_book_images.html
@@ -71,6 +71,8 @@
 <img src="https://i.gr-assets.com/images/S/compressed.photo.goodreads.com/books/1327921813l/47990.jpg" width="300" >
 <img src="https://i.gr-assets.com/images/S/compressed.photo.goodreads.com/books/1453058019l/26067586.jpg" width="300" >
 <img src="https://i.gr-assets.com/images/S/compressed.photo.goodreads.com/books/1618510588l/56224080.jpg" width="300" >
+<img src="https://i.gr-assets.com/images/S/compressed.photo.goodreads.com/books/1560055091l/43212425._SX318_.jpg" width="300" >
+<img src="https://i.gr-assets.com/images/S/compressed.photo.goodreads.com/books/1617709587l/55339408.jpg" width="300" >
 </div>
 </body>
 </html>
