--- a/report/books/Completed_books_sorted_by_name.html
+++ b/report/books/Completed_books_sorted_by_name.html
@@ -7,10 +7,10 @@
 </head>
 <body>
 <div class="content">
-Completed books sorted by name - 10/01/2021 06:00<br>
+Completed books sorted by name - 10/01/2021 22:24<br>
 -----------------------------------------------------<br>
  <br>
-397 books<br>
+399 books<br>
  <br>
 12 Rules for Life - Jordan B. Peterson - 15H 44M (Completed in 2020)<br>
 13 Things That Don't Make Sense - Michael Brooks - 8H 59M (Completed in 2018)<br>
@@ -208,6 +208,7 @@ How To - Absurd Scientific Advice for Common Real-World Problems - Randall Munro
 How To Win Friends & Influence People in the Digital Age - Dale Carnegie - 7H 8M (Completed in 2020)<br>
 How to Be an Antiracist - Ibram X. Kendi - 10H 46M (Completed in 2020)<br>
 How to Live Safely in a Science Fictional Universe - Charles Yu - 6H 8M (Completed in 2020)<br>
+How to Stop Losing Your Sht with Your Kids - Carla Naumburg - 5H 58M (Completed in 2021)<br>
 How to Talk So Kids Can Learn - 1H 44M (Completed in 2018)<br>
 Hyperion Cantos 1 - Hyperion - 20H 49M (Completed in 2013)<br>
 Hyperion Cantos 2 - The Fall of Hyperion - 21H 52M (Completed in 2013)<br>
@@ -259,6 +260,7 @@ Never Let Me Go - Kazuo Ishiguro - 9H 43M (Completed in 2019)<br>
 Neverwhere - Neil Gaiman - 12H 37M (Completed in 2015)<br>
 Newsflesh 1 - Feed - Mira Grant - 15H 14M (Completed in 2014)<br>
 Nightflyers - George R. R. Martin - 4H 5M (Completed in 2019)<br>
+Noise - Daniel Kahneman - 13H 32M (Completed in 2021)<br>
 Norse Mythology - Neil Gaiman - 6H 31M (Completed in 2018)<br>
 Old Man's War - The Sagan Diary (Novella) - John Scalzi - 1H 35M (Completed in 2015)<br>
 Old Man's War 1 - Old Man's War - John Scalzi - 9H 54M (Completed in 2014)<br>
@@ -414,9 +416,9 @@ Zones of Thought 1 - A Fire Upon the Deep - Vernor Vinge - 21H 43M (Completed in
 Summary Report<br>
  <br>
 Folder totals<br>
-Queue - Current Audiobooks - 182 books - 2294H 17M / 95D 14H 17M<br>
+Queue - Current Audiobooks - 181 books - 2280H 45M / 95D 0H 45M<br>
 Queue - Audible Audiobooks - 31 books - 483H 48M / 20D 3H 48M<br>
-Completed in 2021 - 64 books - 603H 51M / 25D 3H 51M<br>
+Completed in 2021 - 66 books - 623H 21M / 25D 23H 21M<br>
 Completed in 2020 - 95 books - 918H 55M / 38D 6H 55M<br>
 Completed in 2019 - 52 books - 555H 25M / 23D 3H 25M<br>
 Completed in 2018 - 29 books - 286H 52M / 11D 22H 52M<br>
@@ -425,7 +427,7 @@ Completed in 2016 - 29 books - 336H 38M / 14D 0H 38M<br>
 Completed in 2015 - 37 books - 457H 16M / 19D 1H 16M<br>
 Completed in 2014 - 27 books - 479H 44M / 19D 23H 44M<br>
 Completed in 2013 - 38 books - 436H 51M / 18D 4H 51M<br>
-Book Reserve - Physical and Kindle Books - 16 books - 196H 33M / 8D 4H 33M<br>
+Book Reserve - Physical and Kindle Books - 15 books - 190H 35M / 7D 22H 35M<br>
 Book Reserve - Manga - 1 books - 7H 58M / 0D 7H 58M<br>
 Book Reserve - Comic Trades - 116 books - 726H 16M / 30D 6H 16M<br>
 Book Reserve - Audiobooks (Need new source) - 24 books - 356H 45M / 14D 20H 45M<br>
@@ -435,22 +437,22 @@ Records<br>
 Most books read in a year: 95 completed in 2020<br>
 Most hours read in a year: 918H 55M / 38D 6H 55M completed in 2020<br>
  <br>
-213 queued items: 2778H 5M / 115D 18H 5M<br>
+212 queued items: 2764H 33M / 115D 4H 33M<br>
 0 reserve titles are marked as high priority<br>
-25.88% of reserve items are queued<br>
+25.82% of reserve items are queued<br>
  <br>
 All books included in this report: 1220 titles - 14533H 45M / 605D 13H 45M<br>
-Records not found in the lookup file: 3<br>
+Records not found in the lookup file: 0<br>
 No duplicate records found<br>
  <br>
-Total completed since 01/01/2013: 397 titles - 4381H 39M / 182D 13H 39M<br>
-Total remaining in queue and reserve: 823 titles - 10152H 5M / 423D 0H 5M<br>
-Average completed per year: 45.4 titles - 500H 54M / 20D 20H 54M<br>
-Remaining years of reserve material at average yearly pace: 18.1<br>
-Remaining years of reserve material at current year pace: 9.7<br>
+Total completed since 01/01/2013: 399 titles - 4401H 9M / 183D 9H 9M<br>
+Total remaining in queue and reserve: 821 titles - 10132H 35M / 422D 4H 35M<br>
+Average completed per year: 45.6 titles - 503H 8M / 20D 23H 8M<br>
+Remaining years of reserve material at average yearly pace: 18.0<br>
+Remaining years of reserve material at current year pace: 9.4<br>
  <br>
-Total time to process all reports: 00:00:01.803 (1.803 seconds)<br>
-Total time including file writes: 00:00:01.803 (1.803 seconds)
+Total time to process all reports: 00:00:03.352 (3.352 seconds)<br>
+Total time including file writes: 00:00:03.353 (3.353 seconds)
 </div>
 </body>
 </html>
