--- a/report/media/index.html
+++ b/report/media/index.html
@@ -13,58 +13,17 @@ Media Tracker
 
 <table style="width:100%">
 <tr><td>
-Gunpowder Milkshake
-<img src="unchecked.png">
-</table>
-
-<table style="width:100%">
-<tr><td>
 Bill & Ted Face the Music
 <img src="unchecked.png">
 </table>
 
+<table style="width:100%">
+<tr><td>
+Gunpowder Milkshake
+<img src="unchecked.png">
+</table>
+
 <br>
-
-<table style="width:100%">
-<tr><td>
-Castlevania (Stop at Season 2)<!-- 2 seasons -->
-</td></tr>
-<tr><td>
-Season 1<!-- 4 episodes -->
-<img src="checked.png">
-<img src="checked.png">
-<img src="checked.png">
-<img src="checked.png">
-</td></tr>
-<tr><td>
-Season 2<!-- 8 episodes -->
-<img src="unchecked.png">
-<img src="unchecked.png">
-<img src="unchecked.png">
-<img src="unchecked.png">
-<img src="unchecked.png">
-<img src="unchecked.png">
-<img src="unchecked.png">
-<img src="unchecked.png">
-</td></tr>
-</table><br>
-
-<table style="width:100%">
-<tr><td>
-The Witcher<!-- 1 season -->
-</td></tr>
-<tr><td>
-Season 1<!-- 8 episodes -->
-<img src="unchecked.png">
-<img src="unchecked.png">
-<img src="unchecked.png">
-<img src="unchecked.png">
-<img src="unchecked.png">
-<img src="unchecked.png">
-<img src="unchecked.png">
-<img src="unchecked.png">
-</td></tr>
-</table><br>
 
 <table style="width:100%">
 <tr><td>
@@ -161,6 +120,142 @@ Season 4<!-- 16 episodes -->
 
 <table style="width:100%">
 <tr><td>
+Castlevania (Stop at Season 2)<!-- 2 seasons -->
+</td></tr>
+<tr><td>
+Season 1<!-- 4 episodes -->
+<img src="checked.png">
+<img src="checked.png">
+<img src="checked.png">
+<img src="checked.png">
+</td></tr>
+<tr><td>
+Season 2<!-- 8 episodes -->
+<img src="unchecked.png">
+<img src="unchecked.png">
+<img src="unchecked.png">
+<img src="unchecked.png">
+<img src="unchecked.png">
+<img src="unchecked.png">
+<img src="unchecked.png">
+<img src="unchecked.png">
+</td></tr>
+</table><br>
+
+<table style="width:100%">
+<tr><td>
+Cosmos: Possible Worlds<!-- 1 season -->
+</td></tr>
+<tr><td>
+Season 1<!-- 13 episodes -->
+<img src="checked.png">
+<img src="checked.png">
+<img src="checked.png">
+<img src="unchecked.png">
+<img src="unchecked.png">
+<img src="unchecked.png">
+<img src="unchecked.png">
+<img src="unchecked.png">
+<img src="unchecked.png">
+<img src="unchecked.png">
+<img src="unchecked.png">
+<img src="unchecked.png">
+<img src="unchecked.png">
+</td></tr>
+</table><br>
+
+<table style="width:100%">
+<tr><td>
+Good Omens<!-- 1 season -->
+</td></tr>
+<tr><td>
+Season 1<!-- 7 episodes -->
+<img src="checked.png">
+<img src="unchecked.png">
+<img src="unchecked.png">
+<img src="unchecked.png">
+<img src="unchecked.png">
+<img src="unchecked.png">
+<img src="unchecked.png">
+</td></tr>
+</table><br>
+
+<table style="width:100%">
+<tr><td>
+Invincible<!-- 1 season -->
+</td></tr>
+<tr><td>
+Season 1<!-- 8 episodes -->
+<img src="checked.png">
+<img src="unchecked.png">
+<img src="unchecked.png">
+<img src="unchecked.png">
+<img src="unchecked.png">
+<img src="unchecked.png">
+<img src="unchecked.png">
+<img src="unchecked.png">
+</td></tr>
+</table><br>
+
+<table style="width:100%">
+<tr><td>
+LOVE DEATH + ROBOTS<!-- 2 seasons -->
+</td></tr>
+<tr><td>
+Season 1<!-- 18 episodes -->
+<img src="checked.png">
+<img src="checked.png">
+<img src="checked.png">
+<img src="checked.png">
+<img src="checked.png">
+<img src="checked.png">
+<img src="checked.png">
+<img src="checked.png">
+<img src="checked.png">
+<img src="checked.png">
+<img src="checked.png">
+<img src="checked.png">
+<img src="checked.png">
+<img src="checked.png">
+<img src="checked.png">
+<img src="checked.png">
+<img src="checked.png">
+<img src="checked.png">
+</td></tr>
+<tr><td>
+Season 2<!-- 8 episodes -->
+<img src="unchecked.png">
+<img src="unchecked.png">
+<img src="unchecked.png">
+<img src="unchecked.png">
+<img src="unchecked.png">
+<img src="unchecked.png">
+<img src="unchecked.png">
+<img src="unchecked.png">
+</td></tr>
+</table><br>
+
+<table style="width:100%">
+<tr><td>
+Live Action Cowboy Bebop<!-- 1 season -->
+</td></tr>
+<tr><td>
+Season 1<!-- 10 episodes -->
+<img src="unchecked.png">
+<img src="unchecked.png">
+<img src="unchecked.png">
+<img src="unchecked.png">
+<img src="unchecked.png">
+<img src="unchecked.png">
+<img src="unchecked.png">
+<img src="unchecked.png">
+<img src="unchecked.png">
+<img src="unchecked.png">
+</td></tr>
+</table><br>
+
+<table style="width:100%">
+<tr><td>
 Lower Decks<!-- 2 seasons -->
 </td></tr>
 <tr><td>
@@ -212,46 +307,10 @@ Season 1<!-- 10 episodes -->
 
 <table style="width:100%">
 <tr><td>
-Invincible<!-- 1 season -->
+Primal<!-- 1 season -->
 </td></tr>
 <tr><td>
-Season 1<!-- 8 episodes -->
-<img src="checked.png">
-<img src="unchecked.png">
-<img src="unchecked.png">
-<img src="unchecked.png">
-<img src="unchecked.png">
-<img src="unchecked.png">
-<img src="unchecked.png">
-<img src="unchecked.png">
-</td></tr>
-</table><br>
-
-<table style="width:100%">
-<tr><td>
-Good Omens<!-- 1 season -->
-</td></tr>
-<tr><td>
-Season 1<!-- 7 episodes -->
-<img src="checked.png">
-<img src="unchecked.png">
-<img src="unchecked.png">
-<img src="unchecked.png">
-<img src="unchecked.png">
-<img src="unchecked.png">
-<img src="unchecked.png">
-</td></tr>
-</table><br>
-
-<table style="width:100%">
-<tr><td>
-Cosmos: Possible Worlds<!-- 1 season -->
-</td></tr>
-<tr><td>
-Season 1<!-- 13 episodes -->
-<img src="checked.png">
-<img src="checked.png">
-<img src="checked.png">
+Season 1<!-- 10 episodes -->
 <img src="unchecked.png">
 <img src="unchecked.png">
 <img src="unchecked.png">
@@ -267,35 +326,40 @@ Season 1<!-- 13 episodes -->
 
 <table style="width:100%">
 <tr><td>
-LOVE DEATH + ROBOTS<!-- 2 seasons -->
+Star Wars: The Bad Batch<!-- 1 season -->
 </td></tr>
 <tr><td>
-Season 1<!-- 18 episodes -->
+Season 1<!-- 16 episodes -->
 <img src="checked.png">
-<img src="checked.png">
-<img src="checked.png">
-<img src="checked.png">
-<img src="checked.png">
-<img src="checked.png">
-<img src="checked.png">
-<img src="checked.png">
-<img src="checked.png">
-<img src="checked.png">
-<img src="checked.png">
-<img src="checked.png">
-<img src="checked.png">
-<img src="checked.png">
-<img src="checked.png">
-<img src="checked.png">
-<img src="checked.png">
-<img src="checked.png">
+<img src="unchecked.png">
+<img src="unchecked.png">
+<img src="unchecked.png">
+<img src="unchecked.png">
+<img src="unchecked.png">
+<img src="unchecked.png">
+<img src="unchecked.png">
+<img src="unchecked.png">
+<img src="unchecked.png">
+<img src="unchecked.png">
+<img src="unchecked.png">
+<img src="unchecked.png">
+<img src="unchecked.png">
+<img src="unchecked.png">
+<img src="unchecked.png">
+</td></tr>
+</table><br>
+
+<table style="width:100%">
+<tr><td>
+Star Wars: Visions<!-- 1 season -->
 </td></tr>
 <tr><td>
-Season 2<!-- 8 episodes -->
-<img src="unchecked.png">
-<img src="unchecked.png">
-<img src="unchecked.png">
-<img src="unchecked.png">
+Season 1<!-- 9 episodes -->
+<img src="checked.png">
+<img src="checked.png">
+<img src="checked.png">
+<img src="checked.png">
+<img src="checked.png">
 <img src="unchecked.png">
 <img src="unchecked.png">
 <img src="unchecked.png">
@@ -360,18 +424,10 @@ Season 1<!-- 6 episodes -->
 
 <table style="width:100%">
 <tr><td>
-Star Wars: The Bad Batch<!-- 1 season -->
+The Witcher<!-- 1 season -->
 </td></tr>
 <tr><td>
-Season 1<!-- 16 episodes -->
-<img src="checked.png">
-<img src="unchecked.png">
-<img src="unchecked.png">
-<img src="unchecked.png">
-<img src="unchecked.png">
-<img src="unchecked.png">
-<img src="unchecked.png">
-<img src="unchecked.png">
+Season 1<!-- 8 episodes -->
 <img src="unchecked.png">
 <img src="unchecked.png">
 <img src="unchecked.png">
@@ -397,43 +453,6 @@ Season 1<!-- 9 episodes -->
 <img src="checked.png">
 <img src="checked.png">
 <img src="checked.png">
-<img src="unchecked.png">
-</td></tr>
-</table><br>
-
-<table style="width:100%">
-<tr><td>
-Star Wars: Visions<!-- 1 season -->
-</td></tr>
-<tr><td>
-Season 1<!-- 9 episodes -->
-<img src="checked.png">
-<img src="checked.png">
-<img src="checked.png">
-<img src="checked.png">
-<img src="checked.png">
-<img src="unchecked.png">
-<img src="unchecked.png">
-<img src="unchecked.png">
-<img src="unchecked.png">
-</td></tr>
-</table><br>
-
-<table style="width:100%">
-<tr><td>
-Live Action Cowboy Bebop<!-- 1 season -->
-</td></tr>
-<tr><td>
-Season 1<!-- 10 episodes -->
-<img src="unchecked.png">
-<img src="unchecked.png">
-<img src="unchecked.png">
-<img src="unchecked.png">
-<img src="unchecked.png">
-<img src="unchecked.png">
-<img src="unchecked.png">
-<img src="unchecked.png">
-<img src="unchecked.png">
 <img src="unchecked.png">
 </td></tr>
 </table><br>
