book and media report content update Tue 10/05/2021

--- a/report/books/Reserved_books_sorted_by_folder.html
+++ b/report/books/Reserved_books_sorted_by_folder.html
@@ -7,10 +7,10 @@
 </head>
 <body>
 <div class="content">
-Reserved books sorted by folder - 10/04/2021 06:00<br>
+Reserved books sorted by folder - 10/05/2021 06:00<br>
 -----------------------------------------------------<br>
  <br>
-Queue - Current Audiobooks : 181 books - 2280H 45M / 95D 0H 45M<br>
+Queue - Current Audiobooks : 183 books - 2294H 4M / 95D 14H 4M<br>
  <br>
 112263 - Stephen King - 30H 46M<br>
 13 Things Mentally Strong Parents Don't Do - Amy Morin - 10H 13M<br>
@@ -88,6 +88,7 @@ Murderbot Diaries 5 - Network Effect - Martha Wells - 12H 51M<br>
 Murderbot Diaries 6 - Fugitive Telemetry - Martha Wells - 4H 25M<br>
 Musicophilia - Oliver Sacks - 11H 10M<br>
 Mythos - Stephen Fry - 15H 30M<br>
+Nine Nasty Words - John McWhorter - 6H 54M<br>
 No-Drama Discipline - Daniel J. Siegel - 8H 21M<br>
 Notorious RBG - Irin Carmon - 5H 11M<br>
 Of Mice and Men - John Steinbeck - 3H 12M<br>
@@ -182,6 +183,7 @@ VocabuLearn® German Complete - 9H 2M<br>
 Wayfarers 1 - The Long Way to a Small, Angry Planet - Becky Chambers - 14H 27M<br>
 We - Yevgeny Zamyatin - 6H 53M<br>
 We Have Always Lived in the Castle - Shirley Jackson - 5H 34M<br>
+Weapons of Math Destruction - Cathy O'Neil - 6H 25M<br>
 What the Dog Saw - Malcolm Gladwell - 12H 52M<br>
 When to Rob a Bank - Steven D. Levitt - 8H 16M<br>
 Where Do We Go From Here - Martin Luther King - 8H 40M<br>
@@ -255,8 +257,8 @@ Total Comic Trades : 1<br>
 Attack on Titan 34 - 7H 58M<br>
 -----------------------------------------------------<br>
  <br>
-Book Reserve - Comic Trades : 116 books - 726H 16M / 30D 6H 16M<br>
-Total Comic Trades : 116<br>
+Book Reserve - Comic Trades : 117 books - 731H 14M / 30D 11H 14M<br>
+Total Comic Trades : 117<br>
  <br>
 Absolute Carnage - 6H 13M<br>
 Action Comics 1000 - 4H 58M<br>
@@ -317,6 +319,7 @@ Invincible Iron Man vol 1 - 4H 14M<br>
 Iron Man 2020 Robot Revolution - 4H 14M<br>
 Iron Man Extremis - 4H 58M<br>
 Journey into Mystery by Kieron Gillen The Complete Collection Volume 1 - 12H 12M<br>
+Justice League Dark Vol. 1 The Last Age of Magic - 4H 58M<br>
 Justice League Darkseid War - 11H 42M<br>
 Lobo Portrait of a Bastich - 6H 28M<br>
 Lumberjanes - 4H 6M<br>
@@ -404,7 +407,7 @@ VALIS - Philip K Dick - 8H 44M<br>
 Way Station (Here Gather the Stars) - Clifford Simak - 7H 1M<br>
 -----------------------------------------------------<br>
  <br>
-Book Reserve - Audiobooks : 453 books - 6086H 27M / 253D 14H 27M<br>
+Book Reserve - Audiobooks : 454 books - 6089H 41M / 253D 17H 41M<br>
  <br>
 1-2-3 Magic - Thomas Phelan - 7H 3M<br>
 20,000 Leagues Under the Sea - Jules Verne - 11H 25M<br>
@@ -560,6 +563,7 @@ How Long 'til Black Future Month - N. K. Jemisin - 14H 14M<br>
 How to Raise an Adult - Julie Lythcott-Haims - 12H 35M<br>
 How to Talk So Little Kids Will Listen - Joanna Faber - 10H 10M<br>
 HTTYD 02 - How to Be a Pirate  - Cressida Cowell - 2H 55M<br>
+HTTYD 03 - How to Speak Dragonese  - Cressida Cowell - 3H 13M<br>
 HTTYD 04 - How to Cheat a Dragon's Curse - Cressida Cowell - 3H 20M<br>
 HTTYD 05 - How to Twist a Dragon's Tale - Cressida Cowell - 3H 51M<br>
 HTTYD 06 - A Hero's Guide to Deadly Dragons  - Cressida Cowell - 2H 41M<br>
@@ -864,7 +868,7 @@ Zones of Thought 3 - The Children of the Sky - Vernor Vinge - 26H 56M<br>
 Summary Report<br>
  <br>
 Folder totals<br>
-Queue - Current Audiobooks - 181 books - 2280H 45M / 95D 0H 45M<br>
+Queue - Current Audiobooks - 183 books - 2294H 4M / 95D 14H 4M<br>
 Queue - Audible Audiobooks - 31 books - 483H 48M / 20D 3H 48M<br>
 Completed in 2021 - 66 books - 623H 21M / 25D 23H 21M<br>
 Completed in 2020 - 95 books - 918H 55M / 38D 6H 55M<br>
@@ -877,30 +881,30 @@ Completed in 2014 - 27 books - 479H 44M / 19D 23H 44M<br>
 Completed in 2013 - 38 books - 436H 51M / 18D 4H 51M<br>
 Book Reserve - Physical and Kindle Books - 15 books - 190H 35M / 7D 22H 35M<br>
 Book Reserve - Manga - 1 books - 7H 58M / 0D 7H 58M<br>
-Book Reserve - Comic Trades - 116 books - 726H 16M / 30D 6H 16M<br>
+Book Reserve - Comic Trades - 117 books - 731H 14M / 30D 11H 14M<br>
 Book Reserve - Audiobooks (Need new source) - 24 books - 356H 45M / 14D 20H 45M<br>
-Book Reserve - Audiobooks - 453 books - 6086H 27M / 253D 14H 27M<br>
+Book Reserve - Audiobooks - 454 books - 6089H 41M / 253D 17H 41M<br>
  <br>
 Records<br>
 Most books read in a year: 95 completed in 2020<br>
 Most hours read in a year: 918H 55M / 38D 6H 55M completed in 2020<br>
  <br>
-212 queued items: 2764H 33M / 115D 4H 33M<br>
+214 queued items: 2777H 52M / 115D 17H 52M<br>
 0 reserve titles are marked as high priority<br>
-25.82% of reserve items are queued<br>
+25.94% of reserve items are queued<br>
  <br>
-All books included in this report: 1220 titles - 14533H 45M / 605D 13H 45M<br>
-Records not found in the lookup file: 0<br>
+All books included in this report: 1224 titles - 14555H 15M / 606D 11H 15M<br>
+Records not found in the lookup file: 4<br>
 No duplicate records found<br>
  <br>
 Total completed since 01/01/2013: 399 titles - 4401H 9M / 183D 9H 9M<br>
-Total remaining in queue and reserve: 821 titles - 10132H 35M / 422D 4H 35M<br>
-Average completed per year: 45.6 titles - 502H 39M / 20D 22H 39M<br>
-Remaining years of reserve material at average yearly pace: 18.0<br>
-Remaining years of reserve material at current year pace: 9.4<br>
+Total remaining in queue and reserve: 825 titles - 10154H 5M / 423D 2H 5M<br>
+Average completed per year: 45.6 titles - 502H 30M / 20D 22H 30M<br>
+Remaining years of reserve material at average yearly pace: 18.1<br>
+Remaining years of reserve material at current year pace: 9.6<br>
  <br>
-Total time to process all reports: 00:00:01.611 (1.611 seconds)<br>
-Total time including file writes: 00:00:01.611 (1.611 seconds)
+Total time to process all reports: 00:00:01.834 (1.834 seconds)<br>
+Total time including file writes: 00:00:01.834 (1.834 seconds)
 </div>
 </body>
 </html>
