--- a/report/books/Reserved_books_sorted_by_length.html
+++ b/report/books/Reserved_books_sorted_by_length.html
@@ -7,10 +7,10 @@
 </head>
 <body>
 <div class="content">
-Reserved books sorted by length - 10/04/2021 06:00<br>
+Reserved books sorted by length - 10/05/2021 06:00<br>
 -----------------------------------------------------<br>
  <br>
-821 books<br>
+825 books<br>
  <br>
 Art of War - Sun Tzu - 1H 16M (Queue - Audible Audiobooks)<br>
 Fantastic Beasts and Where to Find Them - J. K. Rowling - 1H 54M (Queue - Current Audiobooks)<br>
@@ -29,6 +29,7 @@ Captain Marvel Vol. 3 Alis Volat Propriis - 2H 59M (Book Reserve - Comic Trades)
 A Christmas Carol - Charles Dickens - 2H 59M (Book Reserve - Audiobooks)<br>
 Strong Voices - Fifteen American Speeches Worth Knowing - Tonya Bolden - 3H 5M (Queue - Current Audiobooks)<br>
 Of Mice and Men - John Steinbeck - 3H 12M (Queue - Current Audiobooks)<br>
+HTTYD 03 - How to Speak Dragonese  - Cressida Cowell - 3H 13M (Book Reserve - Audiobooks)<br>
 Mind over Weight - Ian K. Smith, M.D - 3H 18M (Book Reserve - Audiobooks)<br>
 The Call of the Wild - Jack London - 3H 20M (Queue - Current Audiobooks)<br>
 HTTYD 04 - How to Cheat a Dragon's Curse - Cressida Cowell - 3H 20M (Book Reserve - Audiobooks)<br>
@@ -121,6 +122,7 @@ Timescape - Robert Liparulo - 6H 17M (Book Reserve - Audiobooks)<br>
 Un-Trumping America - Dan Pfeiffer - 6H 22M (Book Reserve - Audiobooks)<br>
 A Life on Our Planet - David Attenborough - 6H 22M (Queue - Current Audiobooks)<br>
 White Fragility - Robin DiAngelo - 6H 22M (Queue - Current Audiobooks)<br>
+Weapons of Math Destruction - Cathy O'Neil - 6H 25M (Queue - Current Audiobooks)<br>
 The Valley of Fear - Sir Arthur Conan Doyle - 6H 25M (Book Reserve - Audiobooks)<br>
 Berserker 3 - Berserker's Planet - 6H 27M (Book Reserve - Audiobooks)<br>
 Suicide Squad vol 5 - 6H 28M (Book Reserve - Comic Trades)<br>
@@ -142,6 +144,7 @@ The Chronicles of Amber 10 - Prince of Chaos - 6H 49M (Book Reserve - Audiobooks
 The Chronicles of Amber 08 - Sign of Chaos - 6H 53M (Queue - Current Audiobooks)<br>
 We - Yevgeny Zamyatin - 6H 53M (Queue - Current Audiobooks)<br>
 Isaac Newton - James Gleick - 6H 53M (Queue - Current Audiobooks)<br>
+Nine Nasty Words - John McWhorter - 6H 54M (Queue - Current Audiobooks)<br>
 Wintering - Katherine May - 6H 55M (Book Reserve - Audiobooks)<br>
 Artemis Fowl 3 - The Eternity Code - 6H 56M (Book Reserve - Audiobooks)<br>
 Prisoner of Our Thoughts - Berrett Koehler - 6H 56M (Book Reserve - Audiobooks)<br>
@@ -746,7 +749,7 @@ Shogun - James Clavell - 53H 48M (Queue - Current Audiobooks)<br>
 Summary Report<br>
  <br>
 Folder totals<br>
-Queue - Current Audiobooks - 181 books - 2280H 45M / 95D 0H 45M<br>
+Queue - Current Audiobooks - 183 books - 2294H 4M / 95D 14H 4M<br>
 Queue - Audible Audiobooks - 31 books - 483H 48M / 20D 3H 48M<br>
 Completed in 2021 - 66 books - 623H 21M / 25D 23H 21M<br>
 Completed in 2020 - 95 books - 918H 55M / 38D 6H 55M<br>
@@ -759,30 +762,30 @@ Completed in 2014 - 27 books - 479H 44M / 19D 23H 44M<br>
 Completed in 2013 - 38 books - 436H 51M / 18D 4H 51M<br>
 Book Reserve - Physical and Kindle Books - 15 books - 190H 35M / 7D 22H 35M<br>
 Book Reserve - Manga - 1 books - 7H 58M / 0D 7H 58M<br>
-Book Reserve - Comic Trades - 116 books - 726H 16M / 30D 6H 16M<br>
+Book Reserve - Comic Trades - 117 books - 731H 14M / 30D 11H 14M<br>
 Book Reserve - Audiobooks (Need new source) - 24 books - 356H 45M / 14D 20H 45M<br>
-Book Reserve - Audiobooks - 453 books - 6086H 27M / 253D 14H 27M<br>
+Book Reserve - Audiobooks - 454 books - 6089H 41M / 253D 17H 41M<br>
  <br>
 Records<br>
 Most books read in a year: 95 completed in 2020<br>
 Most hours read in a year: 918H 55M / 38D 6H 55M completed in 2020<br>
  <br>
-212 queued items: 2764H 33M / 115D 4H 33M<br>
+214 queued items: 2777H 52M / 115D 17H 52M<br>
 0 reserve titles are marked as high priority<br>
-25.82% of reserve items are queued<br>
+25.94% of reserve items are queued<br>
  <br>
-All books included in this report: 1220 titles - 14533H 45M / 605D 13H 45M<br>
-Records not found in the lookup file: 0<br>
+All books included in this report: 1224 titles - 14555H 15M / 606D 11H 15M<br>
+Records not found in the lookup file: 4<br>
 No duplicate records found<br>
  <br>
 Total completed since 01/01/2013: 399 titles - 4401H 9M / 183D 9H 9M<br>
-Total remaining in queue and reserve: 821 titles - 10132H 35M / 422D 4H 35M<br>
-Average completed per year: 45.6 titles - 502H 39M / 20D 22H 39M<br>
-Remaining years of reserve material at average yearly pace: 18.0<br>
-Remaining years of reserve material at current year pace: 9.4<br>
+Total remaining in queue and reserve: 825 titles - 10154H 5M / 423D 2H 5M<br>
+Average completed per year: 45.6 titles - 502H 30M / 20D 22H 30M<br>
+Remaining years of reserve material at average yearly pace: 18.1<br>
+Remaining years of reserve material at current year pace: 9.6<br>
  <br>
-Total time to process all reports: 00:00:01.611 (1.611 seconds)<br>
-Total time including file writes: 00:00:01.611 (1.611 seconds)
+Total time to process all reports: 00:00:01.834 (1.834 seconds)<br>
+Total time including file writes: 00:00:01.834 (1.834 seconds)
 </div>
 </body>
 </html>
