--- a/report/books/Reserved_books_sorted_by_name.html
+++ b/report/books/Reserved_books_sorted_by_name.html
@@ -7,10 +7,10 @@
 </head>
 <body>
 <div class="content">
-Reserved books sorted by name - 10/04/2021 06:00<br>
+Reserved books sorted by name - 10/05/2021 06:00<br>
 -----------------------------------------------------<br>
  <br>
-821 books<br>
+825 books<br>
  <br>
 1-2-3 Magic - Thomas Phelan - 7H 3M (Book Reserve - Audiobooks)<br>
 112263 - Stephen King - 30H 46M (Queue - Current Audiobooks)<br>
@@ -269,6 +269,7 @@ HP 5 - Harry Potter and the Order of the Phoenix - J.K. Rowling - 27H 10M (Queue
 HP 6 - Harry Potter and the Half-Blood Prince - J.K. Rowling - 19H 1M (Queue - Current Audiobooks)<br>
 HP 7 - Harry Potter and the Deathly Hallows - J.K. Rowling - 21H 42M (Queue - Current Audiobooks)<br>
 HTTYD 02 - How to Be a Pirate  - Cressida Cowell - 2H 55M (Book Reserve - Audiobooks)<br>
+HTTYD 03 - How to Speak Dragonese  - Cressida Cowell - 3H 13M (Book Reserve - Audiobooks)<br>
 HTTYD 04 - How to Cheat a Dragon's Curse - Cressida Cowell - 3H 20M (Book Reserve - Audiobooks)<br>
 HTTYD 05 - How to Twist a Dragon's Tale - Cressida Cowell - 3H 51M (Book Reserve - Audiobooks)<br>
 HTTYD 06 - A Hero's Guide to Deadly Dragons  - Cressida Cowell - 2H 41M (Book Reserve - Audiobooks)<br>
@@ -333,6 +334,7 @@ Journey into Mystery by Kieron Gillen The Complete Collection Volume 1 - 12H 12M
 Journey to the Center of the Earth - Jules Verne - 10H 21M (Book Reserve - Audiobooks)<br>
 Julian Comstock - Robert Charles Wilson - 21H 6M (Book Reserve - Audiobooks)<br>
 Jurassic Park - Michael Crichton - 15H 10M (Queue - Audible Audiobooks)<br>
+Justice League Dark Vol. 1 The Last Age of Magic - 4H 58M (Book Reserve - Comic Trades)<br>
 Justice League Darkseid War - 11H 42M (Book Reserve - Comic Trades)<br>
 Kraken - China Mieville - 16H 14M (Book Reserve - Audiobooks)<br>
 Later - Stephen King - 6H 34M (Queue - Current Audiobooks)<br>
@@ -398,6 +400,7 @@ Nation - Terry Pratchett - 9H 34M (Book Reserve - Audiobooks)<br>
 NeuroTribes - Steve Silberman - 18H 51M (Book Reserve - Audiobooks)<br>
 New York 2140 - Kim Stanley Robinson - 22H 41M (Book Reserve - Audiobooks)<br>
 Newsflesh 2 - Deadline - Mira Grant - 15H 6M (Book Reserve - Audiobooks)<br>
+Nine Nasty Words - John McWhorter - 6H 54M (Queue - Current Audiobooks)<br>
 Nine Pints -  A Journey Through the Money, Medicine, and Mysteries of Blood - Rose George - 11H 27M (Book Reserve - Physical and Kindle Books)<br>
 No Country for Old Men - Cormac McCarthy - 7H 33M (Book Reserve - Audiobooks)<br>
 No-Drama Discipline - Daniel J. Siegel - 8H 21M (Queue - Current Audiobooks)<br>
@@ -798,6 +801,7 @@ We - Yevgeny Zamyatin - 6H 53M (Queue - Current Audiobooks)<br>
 We Are Indivisible - Leah Greenberg - 8H 40M (Book Reserve - Audiobooks)<br>
 We Are Never Meeting in Real Life - Samantha Irby - 9H 20M (Book Reserve - Audiobooks)<br>
 We Have Always Lived in the Castle - Shirley Jackson - 5H 34M (Queue - Current Audiobooks)<br>
+Weapons of Math Destruction - Cathy O'Neil - 6H 25M (Queue - Current Audiobooks)<br>
 What Makes a Marriage Last - Marlo Thomas - 20H 1M (Book Reserve - Audiobooks)<br>
 What Unites Us - Dan Rather - 7H 7M (Book Reserve - Audiobooks)<br>
 What the Dog Saw - Malcolm Gladwell - 12H 52M (Queue - Current Audiobooks)<br>
@@ -838,7 +842,7 @@ Zones of Thought 3 - The Children of the Sky - Vernor Vinge - 26H 56M (Book Rese
 Summary Report<br>
  <br>
 Folder totals<br>
-Queue - Current Audiobooks - 181 books - 2280H 45M / 95D 0H 45M<br>
+Queue - Current Audiobooks - 183 books - 2294H 4M / 95D 14H 4M<br>
 Queue - Audible Audiobooks - 31 books - 483H 48M / 20D 3H 48M<br>
 Completed in 2021 - 66 books - 623H 21M / 25D 23H 21M<br>
 Completed in 2020 - 95 books - 918H 55M / 38D 6H 55M<br>
@@ -851,30 +855,30 @@ Completed in 2014 - 27 books - 479H 44M / 19D 23H 44M<br>
 Completed in 2013 - 38 books - 436H 51M / 18D 4H 51M<br>
 Book Reserve - Physical and Kindle Books - 15 books - 190H 35M / 7D 22H 35M<br>
 Book Reserve - Manga - 1 books - 7H 58M / 0D 7H 58M<br>
-Book Reserve - Comic Trades - 116 books - 726H 16M / 30D 6H 16M<br>
+Book Reserve - Comic Trades - 117 books - 731H 14M / 30D 11H 14M<br>
 Book Reserve - Audiobooks (Need new source) - 24 books - 356H 45M / 14D 20H 45M<br>
-Book Reserve - Audiobooks - 453 books - 6086H 27M / 253D 14H 27M<br>
+Book Reserve - Audiobooks - 454 books - 6089H 41M / 253D 17H 41M<br>
  <br>
 Records<br>
 Most books read in a year: 95 completed in 2020<br>
 Most hours read in a year: 918H 55M / 38D 6H 55M completed in 2020<br>
  <br>
-212 queued items: 2764H 33M / 115D 4H 33M<br>
+214 queued items: 2777H 52M / 115D 17H 52M<br>
 0 reserve titles are marked as high priority<br>
-25.82% of reserve items are queued<br>
+25.94% of reserve items are queued<br>
  <br>
-All books included in this report: 1220 titles - 14533H 45M / 605D 13H 45M<br>
-Records not found in the lookup file: 0<br>
+All books included in this report: 1224 titles - 14555H 15M / 606D 11H 15M<br>
+Records not found in the lookup file: 4<br>
 No duplicate records found<br>
  <br>
 Total completed since 01/01/2013: 399 titles - 4401H 9M / 183D 9H 9M<br>
-Total remaining in queue and reserve: 821 titles - 10132H 35M / 422D 4H 35M<br>
-Average completed per year: 45.6 titles - 502H 39M / 20D 22H 39M<br>
-Remaining years of reserve material at average yearly pace: 18.0<br>
-Remaining years of reserve material at current year pace: 9.4<br>
+Total remaining in queue and reserve: 825 titles - 10154H 5M / 423D 2H 5M<br>
+Average completed per year: 45.6 titles - 502H 30M / 20D 22H 30M<br>
+Remaining years of reserve material at average yearly pace: 18.1<br>
+Remaining years of reserve material at current year pace: 9.6<br>
  <br>
-Total time to process all reports: 00:00:01.611 (1.611 seconds)<br>
-Total time including file writes: 00:00:01.611 (1.611 seconds)
+Total time to process all reports: 00:00:01.834 (1.834 seconds)<br>
+Total time including file writes: 00:00:01.834 (1.834 seconds)
 </div>
 </body>
 </html>
