book and media report content update Wed 10/06/2021

--- a/report/books/Reserved_books_sorted_by_length.html
+++ b/report/books/Reserved_books_sorted_by_length.html
@@ -7,10 +7,10 @@
 </head>
 <body>
 <div class="content">
-Reserved books sorted by length - 10/05/2021 06:00<br>
+Reserved books sorted by length - 10/06/2021 06:00<br>
 -----------------------------------------------------<br>
  <br>
-825 books<br>
+826 books<br>
  <br>
 Art of War - Sun Tzu - 1H 16M (Queue - Audible Audiobooks)<br>
 Fantastic Beasts and Where to Find Them - J. K. Rowling - 1H 54M (Queue - Current Audiobooks)<br>
@@ -115,6 +115,7 @@ The Haunting of Hill House - Shirley Jackson - 6H 7M (Book Reserve - Audiobooks)
 Artemis Fowl 1 - Artemis Fowl - 6H 7M (Book Reserve - Audiobooks)<br>
 The System - Robert B. Reich - 6H 9M (Book Reserve - Audiobooks)<br>
 The Weatherman Volume 1 - 6H 13M (Book Reserve - Comic Trades)<br>
+Dopamine Nation - Dr. Anna Lembke - 6H 13M (Queue - Current Audiobooks)<br>
 The Invisible Man - H G Wells - 6H 15M (Book Reserve - Audiobooks)<br>
 Double Star - Robert A. Heinlein - 6H 16M (Book Reserve - Audiobooks)<br>
 The Hound of the Baskervilles - Sir Arthur Conan Doyle - 6H 17M (Book Reserve - Audiobooks)<br>
@@ -749,7 +750,7 @@ Shogun - James Clavell - 53H 48M (Queue - Current Audiobooks)<br>
 Summary Report<br>
  <br>
 Folder totals<br>
-Queue - Current Audiobooks - 183 books - 2294H 4M / 95D 14H 4M<br>
+Queue - Current Audiobooks - 184 books - 2300H 17M / 95D 20H 17M<br>
 Queue - Audible Audiobooks - 31 books - 483H 48M / 20D 3H 48M<br>
 Completed in 2021 - 66 books - 623H 21M / 25D 23H 21M<br>
 Completed in 2020 - 95 books - 918H 55M / 38D 6H 55M<br>
@@ -770,22 +771,22 @@ Records<br>
 Most books read in a year: 95 completed in 2020<br>
 Most hours read in a year: 918H 55M / 38D 6H 55M completed in 2020<br>
  <br>
-214 queued items: 2777H 52M / 115D 17H 52M<br>
+215 queued items: 2784H 5M / 116D 0H 5M<br>
 0 reserve titles are marked as high priority<br>
-25.94% of reserve items are queued<br>
+26.03% of reserve items are queued<br>
  <br>
-All books included in this report: 1224 titles - 14555H 15M / 606D 11H 15M<br>
-Records not found in the lookup file: 4<br>
+All books included in this report: 1225 titles - 14561H 29M / 606D 17H 29M<br>
+Records not found in the lookup file: 1<br>
 No duplicate records found<br>
  <br>
 Total completed since 01/01/2013: 399 titles - 4401H 9M / 183D 9H 9M<br>
-Total remaining in queue and reserve: 825 titles - 10154H 5M / 423D 2H 5M<br>
-Average completed per year: 45.6 titles - 502H 30M / 20D 22H 30M<br>
-Remaining years of reserve material at average yearly pace: 18.1<br>
+Total remaining in queue and reserve: 826 titles - 10160H 19M / 423D 8H 19M<br>
+Average completed per year: 45.5 titles - 502H 21M / 20D 22H 21M<br>
+Remaining years of reserve material at average yearly pace: 18.2<br>
 Remaining years of reserve material at current year pace: 9.6<br>
  <br>
-Total time to process all reports: 00:00:01.834 (1.834 seconds)<br>
-Total time including file writes: 00:00:01.834 (1.834 seconds)
+Total time to process all reports: 00:00:01.716 (1.716 seconds)<br>
+Total time including file writes: 00:00:01.716 (1.716 seconds)
 </div>
 </body>
 </html>
