--- a/report/books/All_books_sorted_by_name.html
+++ b/report/books/All_books_sorted_by_name.html
@@ -7,10 +7,10 @@
 </head>
 <body>
 <div class="content">
-All books sorted by name - 10/05/2021 06:00<br>
+All books sorted by name - 10/06/2021 06:00<br>
 -----------------------------------------------------<br>
  <br>
-1224 books<br>
+1225 books<br>
  <br>
 1-2-3 Magic - Thomas Phelan - 7H 3M (Book Reserve - Audiobooks)<br>
 112263 - Stephen King - 30H 46M (Queue - Current Audiobooks)<br>
@@ -318,6 +318,7 @@ Don't Sweat the Small Stuff...And It's All Small - Richard Carlson - 4H 3M (Comp
 Doomsday Book - Connie Willis - 25H 51M (Book Reserve - Audiobooks (Need new source))<br>
 Doomsday Clock 1 - 6H 58M (Completed in 2021)<br>
 Doomsday Clock 2 - 7H 13M (Completed in 2021)<br>
+Dopamine Nation - Dr. Anna Lembke - 6H 13M (Queue - Current Audiobooks)<br>
 Double Star - Robert A. Heinlein - 6H 16M (Book Reserve - Audiobooks)<br>
 Dracula - Bram Stoker - 18H 36M (Book Reserve - Audiobooks)<br>
 Dragons at Crumbling Castle - Terry Pratchett - 4H 10M (Completed in 2017)<br>
@@ -1241,7 +1242,7 @@ Zones of Thought 3 - The Children of the Sky - Vernor Vinge - 26H 56M (Book Rese
 Summary Report<br>
  <br>
 Folder totals<br>
-Queue - Current Audiobooks - 183 books - 2294H 4M / 95D 14H 4M<br>
+Queue - Current Audiobooks - 184 books - 2300H 17M / 95D 20H 17M<br>
 Queue - Audible Audiobooks - 31 books - 483H 48M / 20D 3H 48M<br>
 Completed in 2021 - 66 books - 623H 21M / 25D 23H 21M<br>
 Completed in 2020 - 95 books - 918H 55M / 38D 6H 55M<br>
@@ -1262,22 +1263,22 @@ Records<br>
 Most books read in a year: 95 completed in 2020<br>
 Most hours read in a year: 918H 55M / 38D 6H 55M completed in 2020<br>
  <br>
-214 queued items: 2777H 52M / 115D 17H 52M<br>
+215 queued items: 2784H 5M / 116D 0H 5M<br>
 0 reserve titles are marked as high priority<br>
-25.94% of reserve items are queued<br>
+26.03% of reserve items are queued<br>
  <br>
-All books included in this report: 1224 titles - 14555H 15M / 606D 11H 15M<br>
-Records not found in the lookup file: 4<br>
+All books included in this report: 1225 titles - 14561H 29M / 606D 17H 29M<br>
+Records not found in the lookup file: 1<br>
 No duplicate records found<br>
  <br>
 Total completed since 01/01/2013: 399 titles - 4401H 9M / 183D 9H 9M<br>
-Total remaining in queue and reserve: 825 titles - 10154H 5M / 423D 2H 5M<br>
-Average completed per year: 45.6 titles - 502H 30M / 20D 22H 30M<br>
-Remaining years of reserve material at average yearly pace: 18.1<br>
+Total remaining in queue and reserve: 826 titles - 10160H 19M / 423D 8H 19M<br>
+Average completed per year: 45.5 titles - 502H 21M / 20D 22H 21M<br>
+Remaining years of reserve material at average yearly pace: 18.2<br>
 Remaining years of reserve material at current year pace: 9.6<br>
  <br>
-Total time to process all reports: 00:00:01.834 (1.834 seconds)<br>
-Total time including file writes: 00:00:01.834 (1.834 seconds)
+Total time to process all reports: 00:00:01.716 (1.716 seconds)<br>
+Total time including file writes: 00:00:01.716 (1.716 seconds)
 </div>
 </body>
 </html>
