book and media report content update Thu 10/07/2021

--- a/report/books/Completed_books_sorted_by_name.html
+++ b/report/books/Completed_books_sorted_by_name.html
@@ -7,10 +7,10 @@
 </head>
 <body>
 <div class="content">
-Completed books sorted by name - 10/06/2021 06:00<br>
+Completed books sorted by name - 10/07/2021 06:00<br>
 -----------------------------------------------------<br>
  <br>
-399 books<br>
+400 books<br>
  <br>
 12 Rules for Life - Jordan B. Peterson - 15H 44M (Completed in 2020)<br>
 13 Things That Don't Make Sense - Michael Brooks - 8H 59M (Completed in 2018)<br>
@@ -361,6 +361,7 @@ The Dresden Files 06 - Blood Rites - Jim Butcher - 13H 11M (Completed in 2017)<b
 The Dresden Files 07 - Dead Beat - Jim Butcher - 15H 13M (Completed in 2018)<br>
 The Dresden Files 08 - Proven Guilty - Jim Butcher - 16H 21M (Completed in 2021)<br>
 The Emperor of All Maladies - Siddhartha Mukherjee - 20H 51M (Completed in 2019)<br>
+The Family Firm - A Data-Driven Guide to Better Decision Making in the Early School Years - Emily Oster - 7H 58M (Completed in 2021)<br>
 The Force Awakens - Alan Dean Foster - 10H 17M (Completed in 2016)<br>
 The Forever War - Joe Haldeman - 9H 21M (Completed in 2015)<br>
 The Goblin Emperor - Katherine Addison - 16H 29M (Completed in 2016)<br>
@@ -416,9 +417,9 @@ Zones of Thought 1 - A Fire Upon the Deep - Vernor Vinge - 21H 43M (Completed in
 Summary Report<br>
  <br>
 Folder totals<br>
-Queue - Current Audiobooks - 184 books - 2300H 17M / 95D 20H 17M<br>
+Queue - Current Audiobooks - 138 books - 1720H 53M / 71D 16H 53M<br>
 Queue - Audible Audiobooks - 31 books - 483H 48M / 20D 3H 48M<br>
-Completed in 2021 - 66 books - 623H 21M / 25D 23H 21M<br>
+Completed in 2021 - 67 books - 631H 20M / 26D 7H 20M<br>
 Completed in 2020 - 95 books - 918H 55M / 38D 6H 55M<br>
 Completed in 2019 - 52 books - 555H 25M / 23D 3H 25M<br>
 Completed in 2018 - 29 books - 286H 52M / 11D 22H 52M<br>
@@ -431,28 +432,28 @@ Book Reserve - Physical and Kindle Books - 15 books - 190H 35M / 7D 22H 35M<br>
 Book Reserve - Manga - 1 books - 7H 58M / 0D 7H 58M<br>
 Book Reserve - Comic Trades - 117 books - 731H 14M / 30D 11H 14M<br>
 Book Reserve - Audiobooks (Need new source) - 24 books - 356H 45M / 14D 20H 45M<br>
-Book Reserve - Audiobooks - 454 books - 6089H 41M / 253D 17H 41M<br>
+Book Reserve - Audiobooks - 498 books - 6635H 55M / 276D 11H 55M<br>
  <br>
 Records<br>
 Most books read in a year: 95 completed in 2020<br>
 Most hours read in a year: 918H 55M / 38D 6H 55M completed in 2020<br>
  <br>
-215 queued items: 2784H 5M / 116D 0H 5M<br>
+169 queued items: 2204H 41M / 91D 20H 41M<br>
 0 reserve titles are marked as high priority<br>
-26.03% of reserve items are queued<br>
+20.51% of reserve items are queued<br>
  <br>
-All books included in this report: 1225 titles - 14561H 29M / 606D 17H 29M<br>
+All books included in this report: 1224 titles - 14536H 18M / 605D 16H 18M<br>
 Records not found in the lookup file: 1<br>
 No duplicate records found<br>
  <br>
-Total completed since 01/01/2013: 399 titles - 4401H 9M / 183D 9H 9M<br>
-Total remaining in queue and reserve: 826 titles - 10160H 19M / 423D 8H 19M<br>
-Average completed per year: 45.5 titles - 502H 21M / 20D 22H 21M<br>
-Remaining years of reserve material at average yearly pace: 18.2<br>
-Remaining years of reserve material at current year pace: 9.6<br>
+Total completed since 01/01/2013: 400 titles - 4409H 8M / 183D 17H 8M<br>
+Total remaining in queue and reserve: 824 titles - 10127H 9M / 421D 23H 9M<br>
+Average completed per year: 45.6 titles - 503H 6M / 20D 23H 6M<br>
+Remaining years of reserve material at average yearly pace: 18.1<br>
+Remaining years of reserve material at current year pace: 9.5<br>
  <br>
-Total time to process all reports: 00:00:01.716 (1.716 seconds)<br>
-Total time including file writes: 00:00:01.716 (1.716 seconds)
+Total time to process all reports: 00:00:12.363 (12.363 seconds)<br>
+Total time including file writes: 00:00:12.363 (12.363 seconds)
 </div>
 </body>
 </html>
