Change landing page to imitate button images

--- a/landing.html
+++ b/landing.html
@@ -25,7 +25,15 @@
             background-color: transparent;
             text-decoration: underline;
         }
-
+        .button {
+            font: bold 48px Arial;
+            text-decoration: none;
+            padding: 2px 8px 2px 8px;
+            border-top: 1px solid #CCCCCC;
+            border-right: 1px solid #333333;
+            border-bottom: 1px solid #333333;
+            border-left: 1px solid #CCCCCC;
+        }
     </style>
     <link rel="stylesheet" href="landing.css">
     <meta charset="UTF-8">
@@ -34,12 +42,13 @@
 <body>
 <div class="content">
     <BR>
-<a href="report/books">Book Report</a><BR>
+<a href="report/books" class="button">Book Report</a><BR>
     <BR>
-<a href="report/media">Media Report - Jason</a><BR>
+<a href="report/media" class="button">Media Report - Jason</a><BR>
     <BR>
-<a href="report/media/k_progress.html">Media Report - Kerrigan</a><BR>
+<a href="report/media/k_progress.html" class="button">Media Report - Kerrigan</a><BR>
     <BR>
 </div>
+
 </body>
 </html>
