Change landing page to button images

--- a/landing.html
+++ b/landing.html
@@ -25,15 +25,6 @@
             background-color: transparent;
             text-decoration: underline;
         }
-        .button {
-            font: bold 48px Arial;
-            text-decoration: none;
-            padding: 2px 8px 2px 8px;
-            border-top: 1px solid #CCCCCC;
-            border-right: 1px solid #333333;
-            border-bottom: 1px solid #333333;
-            border-left: 1px solid #CCCCCC;
-        }
     </style>
     <link rel="stylesheet" href="landing.css">
     <meta charset="UTF-8">
@@ -42,13 +33,10 @@
 <body>
 <div class="content">
     <BR>
-<a href="report/books" class="button">Book Report</a><BR>
-    <BR>
-<a href="report/media" class="button">Media Report - Jason</a><BR>
-    <BR>
-<a href="report/media/k_progress.html" class="button">Media Report - Kerrigan</a><BR>
+    <a href="report/books"><img alt="Book Report" src="button_purple_book_640x160.png" width=640 height=160></a>
+    <a href="report/media"><img alt="Jason Media Progress" src="button_purple_media_j_640x160.png" width=640 height=160></a>
+    <a href="report/media/k_progress.html"><img alt="Kerrigan Media Progress" src="button_purple_media_k_640x160.png" width=640 height=160></a>
     <BR>
 </div>
-
 </body>
 </html>
