Change book report main page to css buttons

--- a/report/books/index.html
+++ b/report/books/index.html
@@ -3,13 +3,13 @@
 <head>
     <style>
         a:link {
-            color: lightslategrey;
+            color: white;
             background-color: transparent;
             text-decoration: none;
         }
 
         a:visited {
-            color: darkslateblue;
+            color: white;
             background-color: transparent;
             text-decoration: none;
         }
@@ -25,32 +25,80 @@
             background-color: transparent;
             text-decoration: underline;
         }
-
     </style>
     <link rel="stylesheet" href="index.css">
     <meta charset="UTF-8">
-    <title>Book Reports</title>
+    <title>Landing Page</title>
 </head>
 <body>
-<div class="content">
-    <BR>
-<a href="book_images_by_year.html">Book Images by Year</a><BR>
-    <BR>
-<a href="Completed_books_sorted_by_folder.html">Completed Books by Year</a><BR>
-<a href="Completed_books_sorted_by_length.html">Completed Books by Length</a><BR>
-<a href="Completed_books_sorted_by_name.html">Completed Books by Name</a><BR>
-    <BR>
-<a href="Reserved_books_sorted_by_folder.html">Reserved Books by Folder</a><BR>
-<a href="Reserved_books_sorted_by_length.html">Reserved Books by Length</a><BR>
-<a href="Reserved_books_sorted_by_name.html">Reserved Books by Name</a><BR>
-    <BR>
-<a href="A_randomized_list_of_reserved_comic_book_trade_titles.html">Random Reserved Comic Titles</a><BR>
-<a href="A_randomized_list_of_queued_titles.html">Random Queued Titles</a><BR>
-    <BR>
-<a href="All_books_sorted_by_name.html">All Books by Name</a><BR>
-    <BR>
-<a href="sanderstatus.html">Brandon Sanderson Status Report</a><BR>
-    <BR>
+
+<div class="title">Book Images</div>
+<div id="container1">
+    <div class="button" id="button-1">
+        <div id="slide1"></div>
+        <a href="book_images_by_year.html">By Year</a>
+    </div>
 </div>
+
+<div class="title">Completed Books</div>
+<div id="container2">
+    <div class="button" id="button-2">
+        <div id="slide2"></div>
+        <a href="Completed_books_sorted_by_folder.html">By Folder</a>
+    </div>
+    <div class="button" id="button-3">
+        <div id="slide3"></div>
+        <a href="Completed_books_sorted_by_length.html">By Length</a>
+    </div>
+    <div class="button" id="button-4">
+        <div id="slide4"></div>
+        <a href="Completed_books_sorted_by_name.html">By Name</a>
+    </div>
+</div>
+
+<div class="title">Reserved Books</div>
+<div id="container3">
+    <div class="button" id="button-5">
+        <div id="slide5"></div>
+        <a href="Reserved_books_sorted_by_folder.html">By Folder</a>
+    </div>
+    <div class="button" id="button-6">
+        <div id="slide6"></div>
+        <a href="Reserved_books_sorted_by_length.html">By Length</a>
+    </div>
+    <div class="button" id="button-7">
+        <div id="slide7"></div>
+        <a href="Reserved_books_sorted_by_name.html">By Name</a>
+    </div>
+</div>
+
+<div class="title">All Books</div>
+<div id="container4">
+    <div class="button" id="button-8">
+        <div id="slide8"></div>
+        <a href="All_books_sorted_by_name.html">By Name</a>
+    </div>
+</div>
+
+<div class="title">Randomized Lists</div>
+<div id="container5">
+    <div class="button" id="button-9">
+        <div id="slide9"></div>
+        <a href="A_randomized_list_of_reserved_comic_book_trade_titles.html">Reserved Comics</a>
+    </div>
+    <div class="button" id="button-10">
+        <div id="slide10"></div>
+        <a href="A_randomized_list_of_queued_titles.html">Queued Titles</a>
+    </div>
+</div>
+
+<div class="title">Brandon Sanderson Status Report</div>
+<div id="container6">
+    <div class="button" id="button-11">
+        <div id="slide11"></div>
+        <a href="sanderstatus.html">Sanderstatus</a>
+    </div>
+</div>
+
 </body>
 </html>
