Change book report main page to css buttons

--- a/landing.html
+++ b/landing.html
@@ -32,23 +32,23 @@
 </head>
 <body>
 
-<div id="container">
-
+<div id="container1">
     <div class="button" id="button-1">
         <div id="slide1"></div>
         <a href="report/books">Book Report</a>
     </div>
+</div>
 
+<div id="container2">
     <div class="button" id="button-2">
         <div id="slide2"></div>
         <a href="report/media">Jason's Media</a>
     </div>
-
     <div class="button" id="button-3">
         <div id="slide3"></div>
         <a href="report/media/k_progress.html">Kerrigan's Media</a>
     </div>
-
 </div>
+
 </body>
 </html>
